mule-user-guide/v/3.6/mule-expression-language-date-and-time-functions.adoc
=  Mule表达式语言日期和时间函数
:keywords: anypoint studio, esb, mel, mule expression language, native language, custom language, expression, mule expressions

此参考页提供MEL中日期和时间函数的列表和简要说明。有关说明性信息，请参阅 link:/mule-user-guide/v/3.6/mule-expression-language-mel[骡子表达语言]， link:/mule-user-guide/v/3.6/mule-expression-language-basic-syntax[MEL基本语法]和 link:/mule-user-guide/v/3.6/mule-expression-language-examples[MEL的例子]。

== 假设

本文假定您熟悉 link:/mule-user-guide/v/3.6/mule-expression-language-mel[骡子表达语言（MEL）]。此外，本文假设您使用的是Mule 3.4.0或更高版本。

== 获取服务器时间

您可以使用上下文对象*server*和以下某个字段获取服务器的当前日期和时间：

* `日期时间
* `nanoTime

例如，以下表达式返回服务器的日期和时间：`#[server.dateTime]`

您可以使用以下量词进一步指定要提取的数据：

*  `server.dateTime.getMilliSeconds()`
*  `seconds`
*  `minutes`
*  `hours`
*  `dayOfWeek`
*  `dayOfMonth`
*  `dayOfYear`
*  `weekOfMonth`
*  `weekOfYear`
*  `month`
*  `year`

下表介绍了您可以使用dateTime执行的操作。以下各节提供了有关如何使用MEL表达式中的操作的详细信息。

[%header,cols="2*"]
|===
| {行动{1}}操作
| *<<Obtain DateTime>>* a |
* 日期时间
*  nanoTime

| *create a new DateTime instance* a |
* 默认构造函数
* 日历
* 日期
* 的XMLGregorianCalendar
*  iso860
* 格式的字符串

| *<<Compute Relative Dates>>* a |
*  plusMilliSeconds
*  plusSeconds
*  plusMinutes
*  plusHours
*  plusDays
*  plusWeeks
*  plusMonths
*  plusYears

| *{{0}}* a |
使用==运算符比较* 的相等性
*  isBefore
*  isAfter

| *access timezones* a |
*  withTimeZone
*  changeTimeZone（时区）
* 的timeZone
*  withLocale（localeAsString）;

| *<<Format Strings>>* a |
* 格式（）
* 格式（字符串模式）

| *<<Transform>>* a |
*  toCalendar
*  TODATE
*  toXMLCalendar

|===

== 获取DateTime

[%header,cols="4*"]
|===
| ContextObject.Field  |描述 |返回类型 |示例
| server.dateTime  | DateTime对象中的当前系统日期和时间，它通过Mule表达式语言简化了日期的解析/格式化和非常基本的操作。 | org.mule.el .datetime.DateTime a |
[source, code, linenums]
----
#[server.dateTime]
----
| server.nanoTime（） |当前系统时间，以纳秒为单位。相当于 link:http://docs.oracle.com/javase/7/docs/api/java/lang/System.html#nanoTime()[System.nanoTime（）]并具有相同的限制，也就是说，应仅用于测量已用时间等。 | int a |
[source, code, linenums]
----
#[server.nanoTime()]
----

|===

=== 访问部分日期时间信息

[%header,cols="4*"]
|===
|限定符 |描述 |返回类型 |示例
| milliSeconds  |返回当前秒中的毫秒数。 +
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（Calendar.MILLISECOND）]  |长a |
[source, code, linenums]
----
#[payload = (1000 - server.dateTime.milliSeconds) + ' to the next second.';]
----

| seconds  |返回在当前分钟中传递的秒数（0到59）。 +
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（Calendar.SECOND）]  | int a |
[source, code, linenums]
----
#[payload = (60 - server.dateTime.seconds) + ' to the next minute.';]
----

|分钟 |返回当前小时中传递的分钟数（0到59）。 +
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（Calendar.MINUTE）]  | int a |
[source, code, linenums]
----
#[payload = (60 - server.dateTime.minutes) + ' to the next hour.';]
----

|小时 |返回当天传递的小时数（0  -  24）。 +
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（Calendar.HOUR_OF_DAY）]   | int a |
[source, code, linenums]
----
#[payload = (24 - server.dateTime.hours) + ' to the next day.';]
----

| dayOfWeek a |返回下列其中一个整数值：

Calendar.SUNDAY = 1，Calendar.MONDAY = 2，Calendar.TUESDAY = 3，Calendar.WEDNESDAY = 4，Calendar.THURSDAY = 5，Calendar.FRIDAY = 6，Calendar.SATURDAY = 7;

相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（Calendar.DAY_OF_WEEK）]

| int a |
[source, code, linenums]
----
#[if (server.dateTime.dayOfWeek == Calendar.FRIDAY) {
  message.payload = 'TGIF';
}]
----

| dayOfMonth  |返回月份的日期（1到31）。 +
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（Calendar.DAY_OF_MONTH）]  | int a |
[source, code, linenums]
----
#[if (server.dateTime.dayOfMonth == 1) {
  payload = 'Paycheck!!!';
}]
----

| dayOfYear  |返回一年中的一天（1到366）。 +
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（Calendar.DAY_OF_YEAR）]   | int a |
[source, code, linenums]
----
#[if (server.dateTime.dayOfYear == 1) {
  payload = "Happy New Year!!!";
}]
----

| weekOfMonth  |返回月份的星期（1到5）。 +
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（Calendar.DAY_OF_MONTH）]  | int a |
[source, code, linenums]
----
#[if (server.dateTime.weekOfMonth == 1) {
  payload = "Happy New Year!!!";
}]
----

| weekOfYear  |返回一年中的一周（1  -  53）+
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（Calendar.WEEK_OF_YEAR）]  | int a |
[source, code, linenums]
----
#[if (server.dateTime.weekOfYear == 2) {
  payload = 'Stop saying happy new year!!!';
}]
----

|月份 |返回一年中的月份（1  -  12）+
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（的Calendar.MONTH）] + 1  | int a |
[source, code, linenums]
----
#[if (server.dateTime.month == 12) {
  payload = 'Christmas!!!';
}]
----

|年份 |返回年份（例如，2013年）。 +
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#get(int)[calendar.get（Calendar.YEAR）]  | int a |
[source, code, linenums]
----
#[if (server.dateTime.year == 1979) {
  payload = 'Year of good wine and programmers.';
}]
----

|===

== 创建新的日期时间实例

[%header%autowidth.spread]
|===
|功能 |说明 |示例
| DateTime（）a |使用当前时间以及服务器的时区和区域设置构造DateTime。
一个|
[source, code, linenums]
----
#[payload = new org.mule.el.datetime.DateTime();]
----

|日期时间（日历，区域设置）a |
使用指定的日历和区域设置构造DateTime。
[%header,cols="2*"]
!===
！参数！类型
！calender！java.util.Calendar
！locale！java.util.Calendar
!===
一个|
[source, code, linenums]
----
#[calendar = Calendar.getInstance();
locale = org.apache.commons.lang.LocaleUtils.toLocale('en_GB');
payload = new org.mule.el.datetime.DateTime(calendar, locale);]
----

|日期时间（日历）a |
使用指定的日历和服务器的区域设置构造DateTime。
[%header,cols="2*"]
!===
！参数！类型
！calender！java.util.Calendar
!===
一个|
[source, code, linenums]
----
#[calendar = Calendar.getInstance();
payload = new org.mule.el.datetime.DateTime(calendar);]
----

|日期时间（日历）a |
使用指定的日历和服务器的区域设置构造DateTime。
[%header,cols="2*"]
!===
！参数！类型
！calender！javax.xml.datatype.XMLGregorianCalendar
!===
一个|
[source, code, linenums]
----
#[calendar = javax.xml.datatype.DatatypeFactory
.newInstance().newXMLGregorianCalendar();
 
payload = new org.mule.el.datetime.DateTime(calendar);]
----

|日期时间（日期）a |
使用指定的日期和服务器的区域设置和时区构造DateTime。
[%header,cols="2*"]
!===
！参数！类型
！date！java.util.Date
!===
一个|
[source, code, linenums]
----
#[payload = new org.mule.el.datetime.DateTime(new Date());]
----

| DateTIme（iso8601String）a |
使用指定的 link:http://en.wikipedia.org/wiki/ISO_8601[ISO8601]日期构建日期时间。
[%header,cols="2*"]
!===
！参数！类型
！iso8601String！java.lang.String
!===
一个|
[source, code, linenums]
----
#[payload = new org.mule.el.datetime.DateTime('1994-11-05T08:15:30-05:00');]
----

| DateTime（字符串日期字符串，字符串格式）a |
构造DateTime使用包含指定格式的日期时间的字符串。格式应该与 link:http://docs.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html[的SimpleDateFormat]兼容。
[%header,cols="2*"]
!===
！参数！类型
！dateString！java.lang.String
！string！java.lang.String
!===


抛出异常：ParseException

一个|
[source, code, linenums]
----
#[dateString = new Date().toString();
 
payload = new org.mule.el.datetime.DateTime(dateString, 'EEE MMM dd HH:mm:ss zzz yyyy');]
----

|===

== 计算相对日期

[%header,cols="34,33,33"]
|===
|函数 |描述 |返回类型
| plusMilliSeconds（int add） |返回添加了给定的毫秒数的DateTime（或者如果它是负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add（Calendar.MILLISECOND，add）;]   | DateTime +
这允许链接：server.dateTime.plusWeeks（1）.plusDays（1）
| plusSeconds（int add）a |
返回添加了给定秒数的DateTime（如果它是负值，则将其减去）。 +
相当于： link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add（Calendar.SECOND，add）;]

  |的DateTime
| plusMinutes（int add） |返回添加了给定分钟数的DateTime（如果为负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add（Calendar.MINUTE，add）;]  | DateTime
| plusHours（int add） |返回添加了给定小时数的DateTime（或者如果它是负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add（Calendar.HOUR_OF_DAY，add）;]  | DateTime
| plusDays（int add） |返回添加了给定天数的DateTime（如果它是负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add（Calendar.DAY_OF_YEAR，add）;]  | DateTime
| plusWeeks（int add） |返回添加了给定周数的DateTime（或者如果它是负值，则减去）。 | DateTime
| plusMonths（int add） |返回添加了给定月数的DateTime（如果是负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add（Calendar.MONTH，add）;]  | DateTime
| plusYears（int add） |返回添加了给定年数的DateTime（如果为负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[calendar.add（Calendar.YEAR，add）;] link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#add(int,%20int)[ ]  | DateTime
|===

*Example*

[source, code, linenums]
----
#[payload = 'Two days ago it was the ' + server.dateTime.plusDays(-2).dayOfWeek + 'st day of the week';]
----

== 比较

[%header,cols="4*"]
|====
|函数 |描述 |返回类型 |示例
| isBefore（ortherInstant） |返回此Calendar是否表示指定参数表示的时刻之前的时间。 +
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#before(java.lang.Object)[calendar.before（otherInstant）;]    |布尔值a |
[source, code, linenums]
----
#[if (server.dateTime.isBefore(expiryOfSomething)) {
  payload =  'Not Yet Expired';
}]
----

| isAfter（otherInstant） |返回此Calendar是否表示指定参数表示的时间之后的时间。 +
相当于 link:http://docs.oracle.com/javase/7/docs/api/java/util/Calendar.html#after(java.lang.Object)[calendar.after（otherInstant）;]   |布尔值a |
[source, code, linenums]
----
#[if (server.dateTime.isAfter(expiryOfSomething)) {
  payload =  'Expired';
}]
----

|====


*Access Timezones*

[%header,cols="4*"]
|====
|函数 |描述 |返回类型 |示例
| withTimeZone（时区）;一个|
将当前DateTime更改为与定义的时区匹配。有效更改实例的日期时间和时区。
[%header,cols="2*"]
!===
！参数！类型
！timezone！字符串与 link:http://docs.oracle.com/javase/7/docs/api/java/util/TimeZone.html#getTimeZone%28java.lang.String%29[TimeZone.getTimeZone（）]兼容
!===

| DateTime +
这允许链接：server.dateTime.plusWeeks（1）.plusDays（1）a |
[source, code, linenums]
----
#[pstTimeZoneInstant = server.dateTime.withTimeZone('PST');]
 
#[phoenixInstant = server.dateTime.withTimeZone('America/Phoenix');]
----

| changeTimeZone（时区）a |
更改实例的时区。仅有效更改实例的时区。
[%header,cols="2*"]
!===
！参数！类型
！timezone！字符串与 link:http://docs.oracle.com/javase/7/docs/api/java/util/TimeZone.html#getTimeZone%28java.lang.String%29[TimeZone.getTimeZone（）]兼容
!===


| DateTime +
这允许链接：server.dateTime.plusWeeks（1）.plusDays（1）a |
[source, code, linenums]
----
#[pstTimeZoneInstant = server.dateTime.withTimeZone('PST');]
 
#[phoenixInstant = server.dateTime.changeTimeZone('America/Phoenix');]
----

| timeZone  |返回dateTime实例的当前TimeZone。 | string +
与 http://docs.oracle.com/javase/7/docs/api/java/util/TimeZone.html#getTimeZone(java.lang.String)[TimeZone.getTimeZone（）]兼容的字符串。一个|
[source, code, linenums]
----
#[payload = server.dateTime.timeZone]
----

| withLocale（localeAsString）;一个|
此方法采用语言环境的字符串格式并从中创建语言环境对象。
[%header,cols="2*"]
!===
！参数！类型
！localAsString！字符串。语言代码必须小写。国家代码必须大写。分隔符必须是下划线。长度必须正确。
!===


| DateTime +
这允许链接：server.dateTime.plusWeeks（1）.plusDays（1）a |
[source, code, linenums]
----
#[payload = server.dateTime.withLocale('en_GB');]
----

|====

== 格式字符串

[%header,cols="4*"]
|===
|函数 |描述 |返回类型 |示例
|格式（） |使用 http://www.w3.org/TR/xmlschema-2/#isoformats[ISO8601]日期时间格式以字符串格式化实例。 |字符串a |
[source, code, linenums]
----
#[payload = server.dateTime.format()]
----

|格式（字符串模式）a |
以特定格式格式化实例。
[%header,cols="2*"]
!===
！参数！类型
！pattern！字符串与 link:http://docs.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html[的SimpleDateFormat]兼容
!===


|字符串+
使用指定格式的实例的表示。一个|
[source, code, linenums]
----
#[payload = server.dateTime.format(&quot;yyyy.MM.dd G 'at' HH:mm:ss z&quot;)]
----
|===

[WARNING]
====
在Studio的XML编辑器中编写代码时，不能使用双引号来表示字符串文字，因为MEL表达式在配置文件中已用双引号引起来。相反，您可以：

* 使用单引号（`'expression'`）
* 用“ （`&quot;expression&quot;`）
* 用\ u0027（`\u0027expression\u0027`转义引号）

如果您正在使用Studio的可视化编辑器撰写，则会在XML视图中将双引号转换为转义引号` (&quot;`）。
====

== 变换

[%header,cols="4*"]
|===
|函数 |描述 |返回类型 |示例
| toCalendar（） |返回dateTime实例的Java日历表示。 |日历|
[source, code, linenums]
----
#[payload = server.dateTime.toCalendar()]
----

| toDate（） |返回datetime实例的Java Date表示。 | java.util.Date a |
[source, code, linenums]
----
#[payload = server.dateTime.toDate()]
----

| toXMLCalendar（）a |
返回datetime实例的XMLCalendar表示形式。

抛出：DatatypeConfigurationException

| XMLGregorianCalendar a |
[source, code, linenums]
----
#[payload = server.dateTime.toXMLCalendar()]
----
|===

== 另请参阅

* 详细了解 link:/mule-user-guide/v/3.6/mule-expression-language-mel[骡子表达语言（MEL）]。
