mule-user-guide/v/3.8/mule-expression-language-date-and-time-functions.adoc
=  Mule表达式语言日期和时间函数
:keywords: anypoint studio, esb, mel, mule expression language, native language, custom language, expression, mule expressions

此参考页提供MEL中日期和时间函数的列表和简要说明。

有关更多信息，请参阅：

*  link:/mule-user-guide/v/3.8/mule-expression-language-mel[骡子表达语言]
*  link:/mule-user-guide/v/3.8/mule-expression-language-basic-syntax[Mule表达式语言基本语法]
*  link:/mule-user-guide/v/3.8/mule-expression-language-examples[Mule表达语言示例]

== 先决条件

本文假定您熟悉 link:/mule-user-guide/v/3.8/mule-expression-language-mel[骡子表达语言（MEL）]。此外，本文假设您使用的是Mule 3.4.0或更新版本。

== 获取服务器时间

您可以使用上下文对象*server*和以下某个字段获取服务器的当前日期和时间：

*  `dateTime`
*  `nanoTime`

例如，以下表达式返回服务器的日期和时间：+

[indent=2]
----
`#[server.dateTime]`
----
您可以使用以下量词进一步指定要提取的数据：

*  `server.dateTime.getMilliSeconds()`
*  `seconds`
*  `minutes`
*  `hours`
*  `dayOfWeek`
*  `dayOfMonth`
*  `dayOfYear`
*  `weekOfMonth`
*  `weekOfYear`
*  `month`
*  `year`

下表介绍了您可以使用dateTime执行的操作。以下各节提供了有关如何使用MEL表达式中的操作的详细信息。

[%header,cols="25,75"]
|===
| {行动{1}}操作
| *<<Obtain DateTime>>* a |
*  `dateTime`
*  `nanoTime`

| *create a new DateTime instance* a |
* 默认构造函数
** 日历
** 日期
** 的XMLGregorianCalendar
**  iso860
** 格式的字符串

| *<<Compute Relative Dates>>* a |
*  `plusMilliSeconds`
*  `plusSeconds`
*  `plusMinutes`
*  `plusHours`
*  `plusDays`
*  `plusWeeks`
*  `plusMonths`
*  `plusYears`

| *{{0}}* a |
使用`==`运算符比较* 是否相等
*  `isBefore`
*  `isAfter`

| *Access timezones* a |
*  `withTimeZone`
*  `changeTimeZone(timezone)`
*  `timeZone`
*  `withLocale(localeAsString);`

| *<<Format Strings>>* a |
*  `format()`
*  `format(String pattern)`

| *<<Transform>>* a |
*  `toCalendar`
*  `toDate`
*  `toXMLCalendar`

|===

== 获取DateTime

[%header,cols="20,30,20"]
|===
| ContextObject.Field  |描述 |返回类型
| `server.dateTime`  | DateTime对象中的当前系统日期和时间，通过Mule表达式语言简化日期的解析/格式化和非常基本的操作。 | org.mule .el.datetime.DateTime
|  2+ <一个|
*Example*：+
==========================
`#[server.dateTime]`
==========================
| `server.nanoTime()`  |当前系统时间，以纳秒为单位。相当于 link:http://docs.oracle.com/javase/8/docs/api/java/lang/System.html#nanoTime--[System.nanoTime（）]并具有相同的限制。仅用于测量已用时间等。 | int  |  2+ <a |
*Example*：+
==========================
`#[server.nanoTime()]`
==========================

|===

=== 访问部分日期时间信息

[%header,cols="15,70,15"]
|===
|限定符 |描述 |返回类型
| milliSeconds  |返回当前秒中的毫秒数。 +
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（Calendar.MILLISECOND）]  |长
|  2+ <一个|
*Example*：+
==========================
`#[payload = (1000 - server.dateTime.milliSeconds) + ' to the next second.';]`
==========================

| seconds  |返回在当前分钟中传递的秒数（0到59）。 +
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（Calendar.SECOND）]  | int
|  2+ <一个|
*Example*：+
==========================
`#[payload = (60 - server.dateTime.seconds) + ' to the next minute.';]`
==========================

|分钟 |返回当前小时中传递的分钟数（0到59）。 +
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（Calendar.MINUTE）]  | int
|  2+ <一个|
*Example*：+
==========================
`#[payload = (60 - server.dateTime.minutes) + ' to the next hour.';]`
==========================


|小时 |返回当天传递的小时数（0  -  24）。 +
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（Calendar.HOUR_OF_DAY）]   | int
|  2+ <一个|
*Example*：+
==========================
`#[payload = (24 - server.dateTime.hours) + ' to the next day.';]`
==========================

| `dayOfWeek` a |返回下列其中一个整数值：

*  Calendar.SUNDAY = 1
*  Calendar.MONDAY = 2
*  Calendar.TUESDAY = 3
*  Calendar.WEDNESDAY = 4
*  Calendar.THURSDAY = 5
*  Calendar.FRIDAY = 6
*  Calendar.SATURDAY = 7;

相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（Calendar.DAY_OF_WEEK）]
| INT
|  2+ <一个|
*Example*：+
==========================
`＃[if（server.dateTime.dayOfWeek == Calendar.FRIDAY）{
   message.payload ='TGIF';
}]`
==========================

| `dayOfMonth`  |返回月份的日期（1到31）。 +
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（Calendar.DAY_OF_MONTH）]  | int
|  2+ <一个|
*Example*：+
==========================
`＃[if（server.dateTime.dayOfMonth == 1）{
  有效载荷='Paycheck !!!';
}]`
==========================

| `dayOfYear`  |返回一年中的一天（1到366）。 +
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（Calendar.DAY_OF_YEAR）]   | int
|  2+ <一个|
*Example*：+
==========================
`＃[if（server.dateTime.dayOfYear == 1）{
  有效载荷= "Happy New Year!!!";
}]`
==========================

| `weekOfMonth`  |返回月份的星期（1到5）。 +
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（Calendar.DAY_OF_MONTH）]  | int
|  2+ <一个|
*Example*：+
==========================
`＃[if（server.dateTime.weekOfMonth == 1）{
  有效载荷= "Happy New Year!!!";
}]`
==========================

| `weekOfYear`  |返回一年中的一周（1  -  53）+
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（Calendar.WEEK_OF_YEAR）]  | int
|  2+ <一个|
*Example*：+
==========================
`＃[if（server.dateTime.weekOfYear == 2）{
  有效载荷='停止说新年快乐!!!';
}]`
==========================

| `month`  |返回一年中的月份（1  -  12）+
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（的Calendar.MONTH）] + 1  | int
|  2+ <一个|
*Example*：+
==========================
`＃[if（server.dateTime.month == 12）{
  有效载荷='圣诞节!!!';
}]`
==========================

| `year`  |返回年份（例如，2013年）。 +
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#get-int-[calendar.get（Calendar.YEAR）]  | int
|  2+ <一个|
*Example*：+
==========================
`＃[if（server.dateTime.year == 1979）{
  有效载荷='好酒和程序员的一年'。
}]`
==========================

|===

== 创建新的日期时间实例

[%header,cols="25,75"]
|===
|功能 |说明
| `DateTime()` a |使用当前时间以及服务器的时区和区域设置构造DateTime。
| 为|
*Example*：+
==========================
`#[payload = new org.mule.el.datetime.DateTime();]`
==========================
| `DateTime(calendar, locale)` a |
使用指定的日历和区域设置构造DateTime。
[%header,cols="20,80"]
!===
！参数！类型
！calender！java.util.Calendar
！locale！java.util.Calendar
!===
| 为|
*Example*：+
==========================
`＃[calendar = Calendar.getInstance（）;
locale = org.apache.commons.lang.LocaleUtils.toLocale（'en_GB'）;
payload = new org.mule.el.datetime.DateTime（calendar，locale）;]`
==========================

| `DateTime(calendar)` a |
使用指定的日历和服务器的区域设置构造DateTime。
[%header,cols="20,80"]
!===
！参数！类型
！calender！java.util.Calendar
!===
| 为|
*Example*：+
==========================
`＃[calendar = Calendar.getInstance（）;
payload = new org.mule.el.datetime.DateTime（calendar）;]`
==========================

| `DateTime(calendar)` a |
使用指定的日历和服务器的区域设置构造DateTime。
[%header,cols="20,80"]
!===
！参数！类型
！calender！javax.xml.datatype.XMLGregorianCalendar
!===
| 为|
*Example*：+
==========================
`＃[calendar = javax.xml.datatype.DatatypeFactory
。.newInstance（）newXMLGregorianCalendar（）;
 
payload = new org.mule.el.datetime.DateTime（calendar）;]`
==========================

| `DateTime(date)` a |
使用指定的日期和服务器的区域设置和时区构造DateTime。
[%header,cols="20,80"]
!===
！参数！类型
！date！java.util.Date
!===
| 为|
*Example*：+
==========================
`#[payload = new org.mule.el.datetime.DateTime(new Date());]`
==========================

| `DateTime(iso8601String)` a |
使用指定的 link:http://en.wikipedia.org/wiki/ISO_8601[ISO8601]日期构建日期时间。
[%header,cols="20,80"]
!===
！参数！类型
！iso8601String！java.lang.String
!===
| 为|
*Example*：+
==========================
`#[payload = new org.mule.el.datetime.DateTime('1994-11-05T08:15:30-05:00');]`
==========================

| `DateTime(String dateString, String format)` a |
使用包含指定格式的日期时间的字符串构造DateTime。格式应该与 link:http://docs.oracle.com/javase/8/docs/api/java/text/SimpleDateFormat.html[的SimpleDateFormat]兼容。
[%header,cols="20,80"]
!===
！参数！类型
！dateString！java.lang.String
！format！java.lang.String
!===

[CAUTION]
--
引发异常：[red] #ParseException＃
--

| 为|
*Example*：+
==========================
`＃[dateString = new Date（）。toString（）;
payload = new org.mule.el.datetime.DateTime（dateString，'EEE MMM dd HH：mm：ss zzz yyyy'）;]`
==========================

|===

== 计算相对日期

[%header,cols="20,50,30"]
|===
|函数 |描述 |返回类型
| plusMilliSeconds（int add） |返回添加了给定的毫秒数的DateTime（或者如果它是负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add（Calendar.MILLISECOND，add）;]   | DateTime +
这允许链接：server.dateTime.plusWeeks（1）.plusDays（1）
| plusSeconds（int add）a |
返回添加了给定秒数的DateTime（如果它是负值，则将其减去）。 +
相当于： link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add（Calendar.SECOND，add）;]

|日期时间
| plusMinutes（int add） |返回添加了给定分钟数的DateTime（如果为负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add（Calendar.MINUTE，add）;]  | DateTime
| plusHours（int add） |返回添加了给定小时数的DateTime（或者如果它是负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add（Calendar.HOUR_OF_DAY，add）;]  | DateTime
| plusDays（int add） |返回添加了给定天数的DateTime（如果它是负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add（Calendar.DAY_OF_YEAR，add）;]  | DateTime
| plusWeeks（int add） |返回添加了给定周数的DateTime（或者如果它是负值，则减去）。 | DateTime
| plusMonths（int add） |返回添加了给定月数的DateTime（如果是负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add（Calendar.MONTH，add）;]  | DateTime
| plusYears（int add） |返回添加了给定年数的DateTime（如果为负值，则减去）。 +
相当于： link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[calendar.add（Calendar.YEAR，add）;] http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#add-int-int-[// public abstract void add（int field，int amount）]  | DateTime
|===

*Example*

[source,MEL,linenums]
----
#[payload = 'Two days ago it was the ' + server.dateTime.plusDays(-2).dayOfWeek + 'st day of the week';]
----

== 比较

[%header,cols="15,60,25"]
|====
|函数 |描述 |返回类型
| `isBefore(ortherInstant)`  |返回此Calendar是否表示指定参数表示的时刻之前的时间。 +
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#before-java.lang.Object-[calendar.before（otherInstant）;]    |布尔值
|  2+ <一个|
*Example*：+
==========================
`＃[if（server.dateTime.isBefore（expiryOfSomething））{
  有效载荷='尚未过期';
}]`
==========================
| `isAfter(otherInstant)`  |返回此Calendar是否表示指定参数表示的时间之后的时间。 +
相当于 link:http://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html#after-java.lang.Object-[calendar.after（otherInstant）;]   |布尔值
|  2+ <一个|
*Example*：+
==========================
`＃[if（server.dateTime.isAfter（expiryOfSomething））{
  有效载荷='过期';
}]`
==========================
|====


*Access Timezones*

[%header,cols="25,45,30"]
|====
|函数 |描述 |返回类型
| `withTimeZone(timezone);` a |
将当前DateTime更改为与定义的时区匹配。有效更改实例的日期时间和时区。
[%header,cols="20,80"]
!===
！参数！类型
！timezone！字符串与 link:http://docs.oracle.com/javase/8/docs/api/java/util/TimeZone.html#getTimeZone-java.lang.String-[TimeZone.getTimeZone（）]兼容
!===

| DateTime +
这允许链接：server.dateTime.plusWeeks（1）.plusDays（1）

|  2+ <一个|
*Example*：+
==========================
`＃[pstTimeZoneInstant = server.dateTime.withTimeZone（'PST'）;]
 
＃[phoenixInstant = server.dateTime.withTimeZone（'America / Phoenix'）;]`
==========================

| `changeTimeZone(timezone)` a |
更改实例的时区。仅有效更改实例的时区。
[%header,cols="20,80"]
!===
！参数！类型
！timezone！字符串与 link:http://docs.oracle.com/javase/8/docs/api/java/util/TimeZone.html#getTimeZone-java.lang.String-[TimeZone.getTimeZone（）]兼容
!===

| + DateTime + +
这允许链接：server.dateTime.plusWeeks（1）.plusDays（1）
|  2+ <一个|
*Example*：+
==========================
`＃[pstTimeZoneInstant = server.dateTime.withTimeZone（'PST'）;]
 
＃[phoenixInstant = server.dateTime.changeTimeZone（'America / Phoenix'）;]`
==========================

| `timeZone`  |返回dateTime实例的当前TimeZone。 | + string ++
字符串与 link:http://docs.oracle.com/javase/8/docs/api/java/util/TimeZone.html#getTimeZone-java.lang.String-[TimeZone.getTimeZone（）]兼容
|  2+ <一个|
*Example*：+
==========================
`#[payload = server.dateTime.timeZone]`
==========================

| `withLocale(localeAsString);` a |
此方法采用语言环境的字符串格式并从中创建语言环境对象。
[%header,cols="30,70"]
!===
！参数！类型
！localAsString！+ String +。语言代码必须小写。国家代码必须大写。分隔符必须是下划线。长度必须正确。
!===


| + DateTime + +
这允许链接：server.dateTime.plusWeeks（1）.plusDays（1）
|  2+ <一个|
*Example*：+
==========================
`#[payload = server.dateTime.withLocale('en_GB');]`
==========================

|====

== 格式字符串

[%header,cols="25,50,25"]
|===
|函数 |描述 |返回类型
| `format()`  |使用 link:http://www.w3.org/TR/xmlschema-2/#isoformats[ISO8601]日期格式格式化字符串中的实例 |字符串
|  2+ <一个|
*Example*：+
==========================
`#[payload = server.dateTime.format()]`
==========================

| `format(String pattern)` a |
以特定格式格式化实例。
[%header,cols="20,80"]
!===
！参数！类型
！pattern！字符串与 link:http://docs.oracle.com/javase/8/docs/api/java/text/SimpleDateFormat.html[的SimpleDateFormat]兼容
!===
|字符串+
使用指定格式的实例的表示。
|  2+ <一个|
*Example*：+
==========================
`#[payload = server.dateTime.format(&quot;yyyy.MM.dd G 'at' HH:mm:ss z&quot;)]`
==========================
|===

[WARNING]
====
在Studio的XML编辑器中编写代码时，不能使用双引号来表示字符串文字，因为MEL表达式在配置文件中已用双引号引起来。相反，您可以：

* 使用单引号（`'expression'`）
* 将引号与“ （`&quot;expression&quot;`）
* 使用\ u0027（`\u0027expression\u0027`转义引号）

如果您在Studio的可视化编辑器上撰写，则在XML视图中将双引号转换为转义引号` (&quot;`）。
====

== 变换

[%header,cols="25,50,25"]
|===
|函数 |描述 |返回类型
| `toCalendar()`  |返回dateTime实例的Java日历表示。 |日历
|  2+ <一个|
*Example*：+
==========================
`#[payload = server.dateTime.toCalendar()]`
==========================

| `toDate()`  |返回datetime实例的Java Date表示。 | java.util.Date
|  2+ <一个|
*Example*：+
==========================
`#[payload = server.dateTime.toDate()]`
==========================

| `toXMLCalendar()` a |
返回datetime实例的XMLCalendar表示形式。

[CAUTION]
--
抛出：[red]＃DatatypeConfigurationException＃
--

|的XMLGregorianCalendar
|  2+ <一个|
*Example*：+
==========================
`#[payload = server.dateTime.toXMLCalendar()]`
==========================
|===

== 另请参阅

* 详细了解 link:/mule-user-guide/v/3.8/mule-expression-language-mel[骡子表达语言（MEL）]。
